<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="#000"
    tools:context=".Activity.LoginActivity">

  <ProgressBar
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/progressBar1"
      android:visibility="gone"
      style="?android:attr/progressBarStyle" />

  <ImageView
      android:id="@+id/imageView3"
      android:layout_width="200dp"
      android:layout_gravity="center"
      android:layout_height="200dp"
      android:scaleType="fitCenter"
      android:layout_marginTop="40dp"
      app:srcCompat="@drawable/logo" />

  <EditText
      android:layout_width="match_parent"
      android:layout_height="60dp"
      android:id="@+id/etEmail_Login"
      android:background="@drawable/input_design"
      android:hint="  Email Address"
      android:textColorHint="#fff"
      android:inputType="textEmailAddress"
      android:drawableLeft="@drawable/ic_email"
      android:layout_marginTop="28dp"
      style="@style/marginleftright"
      android:textColor="#fff"
      android:textStyle="bold"
      android:textSize="20dp"/>

  <EditText
      android:layout_width="match_parent"
      android:layout_height="60dp"
      android:id="@+id/etPassword_Login"
      android:background="@drawable/input_design"
      android:hint="  Password"
      android:textColorHint="#fff"
      android:drawableLeft="@drawable/ic_password"
      android:layout_marginTop="12dp"
      style="@style/marginleftright"
      android:textColor="#fff"
      android:inputType="textPassword"
      android:textStyle="bold"
      android:textSize="20dp"/>

  <Button
      android:id="@+id/btnLoginL"
      android:layout_width="match_parent"
      style="@style/marginleftright"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:background="@drawable/button"
      android:text="LOGIN"
      android:textSize="25dp"
      android:textStyle="bold"/>

  <TextView
      android:layout_width="match_parent"
      android:layout_marginTop="12dp"
      android:paddingTop="15dp"
      android:textSize="20dp"
      android:textStyle="bold"
      android:textColor="#fff"
      android:id="@+id/forgotPassword"
      android:text="Forgot password?"
      android:padding="8dp"
      style="@style/marginleftright"
      android:layout_height="wrap_content"
      android:textAlignment="textEnd"
      android:gravity="end" />

</LinearLayout>